--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry kind="lib" path="C:/Users/admin/Downloads/poi-4.1.0/lib/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="C:/Users/admin/Downloads/poi-4.1.0/lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="C:/Users/admin/Downloads/poi-4.1.0/ooxml-lib/curvesapi-1.06.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/Downloads/commons-io-2.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
