--- a/.classpath
+++ b/.classpath
@@ -26,5 +26,11 @@
 	<classpathentry kind="lib" path="C:/Users/admin/Downloads/poi-4.1.0/lib/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="C:/Users/admin/Downloads/poi-4.1.0/lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="C:/Users/admin/Downloads/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/Downloads/sqlite-jdbc-3.8.11.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/Downloads/sqlite-jdbc-3.7.15-M1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/Downloads/sqlite-jdbc-3.7.15-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/Downloads/sqlite-jdbc-3.7.15-SNAPSHOT-2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/Downloads/sqlite-jdbc-3.7.15-SNAPSHOT-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/Downloads/sqlite-jdbc4-3.8.2-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
